@@ -50,3 +50,6 @@ Fixed line comments on preprocessor directives getting treated as part of the di
 Added better #define parsing
 Added defines to metadata output
 Tidied up directory structure a bit
+Fixed metadata conditionals not getting generated correctly for else blocks
+Fixed spelling of "preceding" in metadata
+Removed help reference to processing imgui_internal.h for now in case it confuses people
